--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "@tiptap/extension-placeholder": "^3.15.3",
     "@tiptap/react": "^3.15.3",
     "@tiptap/starter-kit": "^3.15.3",
+    "cloudinary": "^2.8.0",
     "clsx": "^2.1.1",
     "gsap": "^3.13.0",
+    "html-react-parser": "^5.2.11",
     "locomotive-scroll": "^4.1.4",
     "lucide-react": "^0.553.0",
     "next": "16.0.1",
