--- a/package.json
+++ b/package.json
@@ -9,10 +9,18 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "@gsap/react": "^2.1.2",
+    "@tiptap/extension-color": "^3.17.1",
+    "@tiptap/extension-highlight": "^3.17.1",
     "@tiptap/extension-image": "^3.15.3",
     "@tiptap/extension-link": "^3.15.3",
     "@tiptap/extension-placeholder": "^3.15.3",
+    "@tiptap/extension-subscript": "^3.17.1",
+    "@tiptap/extension-superscript": "^3.17.1",
+    "@tiptap/extension-text-align": "^3.17.1",
+    "@tiptap/extension-text-style": "^3.17.1",
+    "@tiptap/extension-underline": "^3.17.1",
     "@tiptap/react": "^3.15.3",
     "@tiptap/starter-kit": "^3.15.3",
     "cloudinary": "^2.8.0",
